fix home page resonsponsive issues on mobile

--- a/themes/ansible-community/sass/_homepage-ansible-band.scss
+++ b/themes/ansible-community/sass/_homepage-ansible-band.scss
@@ -17,11 +17,8 @@
 
 .ansible-image {
   display: flex;
-  width: 30rem;
+
   img {
-    @media screen and (max-width: 992px) {
-      width: 20rem;
-    }
     @media screen and (max-width: 768px) {
       display: none;
     }
